--- a/index.html
+++ b/index.html
@@ -77,5 +77,8 @@
     </div>
 
     <script src="script.js"></script>
+    <footer style="background-color: #343a40; color: white; padding: 10px 20px; text-align: center; position: fixed; bottom: 0; width: 100%;">
+        <p>&copy; 2024 Guess the Grid. All rights reserved. <a href="assets/pdf/terms-and-conditions.pdf" target="_blank" style="color: #007bff;">Terms and Conditions</a></p>
+    </footer>
 </body>
 </html>
